# hotalib

./: .clang-format  .clangd  .gitattributes  .gitignore  AGENTS.md  LICENSE  MODULE.bazel  README.md
.github/workflows/: ci.yml
hotaosa/: .clangd  BUILD.bazel
hotaosa/dp/: lis.h  lis_test.cc
hotaosa/ds/: binary_trie.h  binary_trie_test.cc  trie.h  trie_test.cc
hotaosa/interval/: interval_set.h  interval_set_test.cc
hotaosa/string/: rle.h  rle_test.cc  run_length_encoding.h  run_length_encoding_test.cc
notes/abc/abc403/e/: main.cc  note.md
template/: BUILD.bazel  _BUILD.bazel  build
tools/: setup-contest
