load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# Interval set: thin wrapper over boost::icl::interval_set for non-negative keys.
cc_library(
    name = "interval_set",
    hdrs = ["interval/interval_set.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@ac-library//:aclib",
        "@boost.icl",
    ],
)

cc_test(
    name = "trie_test",
    srcs = ["ds/trie_test.cc"],
    deps = [
        ":hotaosa",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "binary_trie_test",
    srcs = ["ds/binary_trie_test.cc"],
    deps = [
        ":hotaosa",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "rle_test",
    srcs = ["string/rle_test.cc"],
    deps = [
        ":hotaosa",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "lis_test",
    srcs = ["dp/lis_test.cc"],
    deps = [
        ":hotaosa",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "interval_set_test",
    srcs = ["interval/interval_set_test.cc"],
    deps = [
        ":hotaosa",
        "@googletest//:gtest_main",
    ],
)
